--- a/my-app/src/style/_button.scss
+++ b/my-app/src/style/_button.scss
@@ -3,19 +3,9 @@
   border: 1px solid black;
   border-radius: 10px;
   transition: background-color linear .2s;
+  background-color: #7d7de7;
 }
-.increase:hover{
+.btn:hover{
   background-color: #9898e7;
 }
 
-.increase{
-  background-color: #7d7de7;
-}
-
-.decrease{
-  background-color: #ec5d5d;
-}
-
-.decrease:hover{
-  background-color: #f38989;
-}
